@@ -131,11 +131,26 @@ MagickExport Image *AdaptiveThresholdImage(const Image *image,
     unsigned long
       row_count=0;
 
+#if QuantumDepth > 8
     const DoublePixelPacket
-      zero = { 0.0, 0.0, 0.0, 0.0 };
+      double_zero = { 0.0, 0.0, 0.0, 0.0 };
+#endif /* QuantumDepth > 8 */
+
+    const LongPixelPacket
+      long_zero = { 0, 0, 0, 0 };
 
     const MagickBool
       matte=((threshold_image->matte) || (threshold_image->colorspace == CMYKColorspace));
+
+#if QuantumDepth == 8
+    const long
+      long_offset = RoundDoubleToQuantum(offset);
+#endif /* QuantumDepth == 8 */
+
+#if QuantumDepth > 8
+    const unsigned long
+      overflow_limit = (ULONG_MAX/MaxRGB);
+#endif /* QuantumDepth > 8 */
 
 #if defined(HAVE_OPENMP)
 #  pragma omp parallel for schedule(dynamic) shared(row_count, status)
@@ -171,42 +186,87 @@ MagickExport Image *AdaptiveThresholdImage(const Image *image,
           {
             for (x=0; x < (long) image->columns; x++)
               {
+#if QuantumDepth > 8
                 DoublePixelPacket
-                  pixel;
+                  double_sum;
+#endif /* QuantumDepth > 8 */
+
+		LongPixelPacket
+		  long_sum;
 
                 const PixelPacket
                   *r;
 
-                long
-                  u,
-                  v;
+#if QuantumDepth > 8
+		unsigned long
+		  overflow;
+#endif /* QuantumDepth > 8 */
 
-                r=p;
-                pixel=zero;
-                for (v=0; v < (long) height; v++)
+		unsigned long
+		  u,
+		  v;
+
+		r=p;
+#if QuantumDepth > 8
+		double_sum=double_zero;
+		overflow = overflow_limit;
+#endif /* QuantumDepth > 8 */
+		long_sum=long_zero;
+		for (v=0; v < height; v++)
                   {
-                    for (u=0; u < (long) width; u++)
+                    for (u=0; u < width; u++)
                       {
-                        pixel.red+=r[u].red;
-                        pixel.green+=r[u].green;
-                        pixel.blue+=r[u].blue;
-                        if (matte)
-                          pixel.opacity+=r[u].opacity;
-                      }
-                    r+=image->columns+width;
+			long_sum.red += r[u].red;
+			long_sum.green += r[u].green;
+			long_sum.blue += r[u].blue;
+			if (matte)
+			  long_sum.opacity += r[u].opacity;
+
+#if QuantumDepth > 8
+			overflow--;
+			if (overflow == 0)
+			  {
+			    double_sum.red += long_sum.red;
+			    double_sum.green += long_sum.green;
+			    double_sum.blue += long_sum.blue;
+			    double_sum.opacity += long_sum.opacity;
+			    long_sum=long_zero;
+			    overflow = overflow_limit;
+			  }
+#endif /* QuantumDepth > 8 */
+		      }
+		    r+=image->columns+width;
                   }
 
-                pixel.red=pixel.red/(width*height)+offset;
-                pixel.green=pixel.green/(width*height)+offset;
-                pixel.blue=pixel.blue/(width*height)+offset;
-                if (matte)
-                  pixel.opacity=pixel.opacity/(width*height)+offset;
+#if QuantumDepth > 8
+		double_sum.red += long_sum.red;
+		double_sum.green += long_sum.green;
+		double_sum.blue += long_sum.blue;
+		double_sum.opacity += long_sum.opacity;
 
-                q->red=q->red <= pixel.red ? 0 : MaxRGB;
-                q->green=q->green <= pixel.green ? 0 : MaxRGB;
-                q->blue=q->blue <= pixel.blue ? 0 : MaxRGB;
+		double_sum.red = double_sum.red/(width*height)+offset;
+		double_sum.green = double_sum.green/(width*height)+offset;
+		double_sum.blue = double_sum.blue/(width*height)+offset;
+		if (matte)
+		  double_sum.opacity = double_sum.opacity/(width*height)+offset;
+
+		long_sum.red = RoundDoubleToQuantum(double_sum.red);
+		long_sum.green = RoundDoubleToQuantum(double_sum.green);
+		long_sum.blue = RoundDoubleToQuantum(double_sum.blue);
+		if (matte)
+		  long_sum.opacity = RoundDoubleToQuantum(double_sum.opacity);
+#else
+		long_sum.red = long_sum.red/(width*height)+long_offset;
+		long_sum.green = long_sum.green/(width*height)+long_offset;
+		long_sum.blue = long_sum.blue/(width*height)+long_offset;
+		if (matte)
+		  long_sum.opacity = long_sum.opacity/(width*height)+long_offset;
+#endif
+                q->red=q->red <= long_sum.red ? 0 : MaxRGB;
+                q->green=q->green <= long_sum.green ? 0 : MaxRGB;
+                q->blue=q->blue <= long_sum.blue ? 0 : MaxRGB;
                 if (matte)
-                  q->opacity=q->opacity <= pixel.opacity ? 0 : MaxRGB;
+                  q->opacity=q->opacity <= long_sum.opacity ? 0 : MaxRGB;
                 p++;
                 q++;
               }
