@@ -39,6 +39,8 @@
 <p>2011-10-02  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/effect.c (AdaptiveThresholdImage): Reduce or eliminate
+expensive floating point calculations when possible.</li>
 <li>wand/magick_wand.c (MagickSetFormat): New Wand function to allow
 setting the file or blob format before it has been read.</li>
 </ul>
